# steam

./: .env.example  .gitignore  CHANGES.md  README.md  README.rst  SECURITY.md  protobuf_list.txt  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml  publish.yml  scorecard.yml  testing_initiative.yml
protobufs/: enums.proto  enums_clientserver.proto  enums_productinfo.proto  htmlmessages.proto  steammessages_accounthardware.proto  steammessages_appoverview.proto  steammessages_auth.proto  steammessages_base.proto  steammessages_chat.proto  steammessages_client_objects.proto  steammessages_clientmetrics.proto  steammessages_clientnotificationtypes.proto  steammessages_clientserver_gameservers.proto  steammessages_clientserver_login.proto  steammessages_clientsettings.proto  steammessages_cloud.proto  steammessages_community.proto  steammessages_contentsystem.proto  steammessages_econ.proto  steammessages_gameservers.proto  steammessages_marketingmessages.proto  steammessages_notifications.proto  steammessages_player.proto  steammessages_publishedfile.proto  steammessages_remoteclient.proto  steammessages_remoteclient_discovery.proto  steammessages_remoteclient_service.proto  steammessages_remoteclient_service_messages.proto  steammessages_remoteplay.proto  steammessages_shader.proto  steammessages_store.proto  steammessages_storebrowse.proto  steammessages_useraccount.proto  webuimessages_audio.proto  webuimessages_gamerecording.proto  webuimessages_hardwareupdate.proto  webuimessages_leds.proto  webuimessages_screensaver.proto  webuimessages_sleep.proto  webuimessages_steamengine.proto  (+3 more)
scripts/: __init__.py  pb_compile.py  pb_fetch.py  pb_gen_enums.py  pb_postprocess.py  pb_services.py  pb_update.py  vcr_webapi.py  vcr_webauth.py
steam/: __init__.py  game_servers.py  guard.py  steamid.py  webapi.py  webauth.py
steam/aio/: __init__.py  client.py  errors.py  pool.py  qr.py  runner.py  status.py  store.py
steam/aio/integrations/: __init__.py  fastapi.py  taskiq.py
steam/client/: __init__.py  cdn.py  gc.py  user.py
steam/client/builtins/: apps.py  leaderboards.py  unified_messages.py  user.py  web.py
steam/core/: cm.py  connection.py
steam/core/msg/: __init__.py  headers.py  structs.py  unified.py
steam/enums/: __init__.py  common.py  proto.py
steam/mcp/: __init__.py  server.py  tools.py
steam/protobufs/: clientmetrics_pb2.py  clientmetrics_pb2.pyi  content_manifest_pb2.py  content_manifest_pb2.pyi  contenthubs_pb2.py  contenthubs_pb2.pyi  encrypted_app_ticket_pb2.py  encrypted_app_ticket_pb2.pyi  enums_clientserver_pb2.py  enums_clientserver_pb2.pyi  enums_pb2.py  enums_pb2.pyi  enums_productinfo_pb2.py  enums_productinfo_pb2.pyi  gc_pb2.py  gc_pb2.pyi  htmlmessages_pb2.py  htmlmessages_pb2.pyi  offline_ticket_pb2.py  offline_ticket_pb2.pyi  steamdatagram_messages_auth_pb2.py  steamdatagram_messages_auth_pb2.pyi  steamdatagram_messages_sdr_pb2.py  steamdatagram_messages_sdr_pb2.pyi  steammessages_accounthardware_pb2.py  steammessages_accounthardware_pb2.pyi  steammessages_appoverview_pb2.py  steammessages_appoverview_pb2.pyi  steammessages_auth_pb2.py  steammessages_auth_pb2.pyi  steammessages_base_pb2.py  steammessages_base_pb2.pyi  steammessages_broadcast_pb2.py  steammessages_broadcast_pb2.pyi  steammessages_chat_pb2.py  steammessages_chat_pb2.pyi  steammessages_childprocessquery_pb2.py  steammessages_childprocessquery_pb2.pyi  steammessages_client_objects_pb2.py  steammessages_client_objects_pb2.pyi  (+191 more)
steam/utils/: __init__.py  binary.py  proto.py  throttle.py  web.py
steam/versions_report/: __init__.py
tests/: test_aio_client.py  test_aio_integration.py  test_aio_prod.py  test_aio_qr.py  test_aio_store.py  test_core_cm.py  test_steamid.py  test_utils.py  test_webapi.py
typings/google/protobuf/internal/: builder.pyi
vcr/: webapi.yaml  webauth_user_pass_only_fail.yaml  webauth_user_pass_only_success.yaml
