[tool.poetry]
# ``name`` is the distribution name on PyPI (``pip install pysteam-client``);
# ``packages`` below keeps the import module ``steam`` unchanged so consumer
# code still writes ``from steam.client import SteamClient``.  The upstream
# ``steam`` distribution name on PyPI is owned by ValvePython since 2013,
# so the fork lives under a scoped name here.
name = "pysteam-client"
version = "1.8.0"
description = "Module for interacting with various Steam features"
authors = ["Rossen Georgiev <rossen@rgp.io>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ValvePython/steam"
repository = "https://github.com/H47R15/steam"
keywords = ["valve", "steam", "steamid", "api", "webapi", "steamcommunity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
]
packages = [
  { include = "steam" },
  # Dev-only helpers exposed as poetry console scripts (see
  # ``[tool.poetry.scripts]`` below).  Shipped alongside the runtime
  # package so ``poetry install`` registers the ``pb-*`` entrypoints on
  # PATH — the modules themselves are only imported when a script is
  # explicitly invoked, so pulling them in has zero runtime cost for
  # library consumers.
  { include = "scripts" },
]

# ─── console scripts ─────────────────────────────────────────────
#
# After ``poetry install`` these are on PATH inside the venv, so a
# maintainer can run e.g. ``poetry run pb-compile`` from the package
# root without spelling out the full ``python scripts/…`` path.
[tool.poetry.scripts]
pb-fetch     = "scripts.pb_fetch:main"
pb-compile   = "scripts.pb_compile:main"
pb-services  = "scripts.pb_services:main"
pb-gen-enums = "scripts.pb_gen_enums:main"
pb-update    = "scripts.pb_update:main"
vcr-webapi   = "scripts.vcr_webapi:main"    # regen vcr/webapi.yaml (needs STEAM_API_KEY)
vcr-webauth  = "scripts.vcr_webauth:main"   # regen vcr/webauth_*.yaml (interactive)

[tool.poetry.dependencies]
# Pinned to Python 3.13.11.
python =                "^3.13.11"

# ─── runtime deps (from the original setup.py) ────────────────────
#
# The legacy ``win-inet-pton`` (py2.7 Windows shim) and
# ``enum34`` (py<3.4 stdlib backport) constraints from setup.py
# were dropped — this fork targets py3.13 only, both are provided
# by the modern stdlib.
pycryptodomex =         ">=3.7.0"
requests =              ">=2.9.1"
# Allow urllib3 2.x — the fork has zero direct urllib3 imports
# (``requests`` is the only consumer), and pip-audit flagged five
# CVEs against the 1.26.x line (PYSEC-2026-141 / -1994 / -1996 /
# -1998 / -1999) that are all fixed in 2.x.  Prior comment about
# "cert-verification breakage in the fork" was unsourced — nothing
# in the tree actually exercises the code path.  Constraint
# matches ``requests``'s own accepted range.
urllib3 =               ">=1.26,<3"
vdf =                   ">=3.3"
cachetools =            ">=3.0.0"
# ``six`` is a py2/py3 compat shim.  Kept because the fork's
# source still imports it in a few places; harmless on py3.13.
six =                   ">=1.10.0"
# Required by ``steam.mcp`` (tool input / output schemas) — the
# only module that imports it at top-level.  Pydantic 2.x is
# small, py3.13-native, and already present in most async Python
# stacks (fastapi / taskiq / mcp-sdk all depend on it), so
# promoting to a hard dep costs almost nothing but simplifies
# the install story (``pip install pysteam-client`` gives you
# working MCP tools out of the box).
pydantic =              ">=2.0,<3"

# ─── client extra (optional deps) ─────────────────────────────────
#
# The ``client`` extra pulls in the gevent-based SteamClient — same
# split as the original setup.py's ``install_extras['client']``.
# Enable with:  poetry install --extras client
#
# ``protobuf`` bumped from the original ``~=3.0`` to ``>=5.26,<7``.
# The fork's ``steam/protobufs/*_pb2.py`` were originally protoc-3.x
# generated (per-message ``_reflection.GeneratedProtocolMessageType``
# + ``_sym_db.RegisterMessage``); protoc-5.x/6.x emits far cleaner
# code (``_descriptor_pool.AddSerializedFile`` + ``_builder`` — 20×
# smaller files, zero descriptor-mutation, works cleanly under
# Pylance).  Runtime protobuf 5.26+ has ``google.protobuf.runtime_version``
# which the modern codegen calls at import time to validate the
# generator/runtime pair — 5.26 is the earliest release that ships
# it, and py3.13 wheels ship from 5.28 onward.  Upper bound ``<7``
# reserves the next major bump for a deliberate migration, not an
# accidental one.
gevent =                { version = ">=1.5.0",  optional = true }
protobuf =              { version = ">=5.26,<7", optional = true }
gevent-eventemitter =   { version = ">=2.1",    optional = true }

[tool.poetry.extras]
client = ["gevent", "protobuf", "gevent-eventemitter"]

# ─── dev deps (from the original dev_requirements.txt) ────────────
#
# ``mock`` is part of the stdlib as ``unittest.mock`` on py3.3+,
# but the fork's test files still ``import mock`` (the
# py2.7-compatible pattern) so we keep the PyPI ``mock`` package
# as a dev dep — it's a stdlib passthrough on modern Python,
# harmless overhead, and rewriting the 7 test files to
# ``from unittest import mock`` would be pure churn.
# ``coveralls-python`` git fork was py2.7-specific and was dropped.
# Everything else was bumped past the py3.13 wheel cliff (vcrpy
# 2.x has no py3.13 wheels; 5.x does).
[tool.poetry.group.dev.dependencies]
mock =                  ">=5.0"
vcrpy =                 ">=5.0"
PyYAML =                ">=6.0"
coverage =              ">=7.0"
pytest =                ">=8.0"
pytest-cov =            ">=4.0"
coveralls =             ">=3.3"
deptry =                "^0.23.0"
# Typeshed stubs for the ``google.protobuf`` runtime — gives Pylance
# the base ``Message`` class's methods (``ParseFromString`` /
# ``SerializeToString`` / …) that the domain ``.pyi`` stubs below
# inherit from.  Dev-only because it ships only ``.pyi`` files with
# no runtime impact.
types-protobuf =        ">=4.24"
# ``mypy-protobuf`` ships a ``protoc-gen-mypy`` plugin that emits
# a ``.pyi`` companion next to every ``*_pb2.py`` when protoc is
# invoked with ``--mypy_out``.  Dev-only — used by the ``pb_compile``
# Makefile target when regenerating from upstream ``.proto`` files;
# never imported at runtime.
#
# ``mypy-protobuf`` bumped to the modern line now that the runtime
# ``protobuf`` pin is ``>=5.26`` — 5.x mypy-protobuf matches the
# 5.x/6.x protoc + runtime that Pylance's typeshed stubs are
# generated against, so the emitted ``.pyi`` files line up with what
# static analysers already expect.
mypy-protobuf =         ">=3.6"

# ─── quality gates (new in 1.7) ───────────────────────────────────
#
# Wired into CI (``.github/workflows/testing_initiative.yml``) and
# the publish workflow — a release cannot land if any of these
# fails.  Runnable locally via ``poetry run ruff check .`` /
# ``poetry run black --check .`` / ``poetry run mypy steam/aio steam/mcp``.
#
# See ``[tool.black]``, ``[tool.ruff]``, and ``[tool.mypy]`` below
# for per-tool scope + rule selection.
ruff =                  ">=0.7,<1"
black =                 ">=24,<28"
mypy =                  ">=1.10,<2"
pip-audit =             ">=2.7,<3"
# ``bandit`` — Python-specific SAST (Static Application Security
# Testing).  Scans for common security anti-patterns: hardcoded
# credentials, weak crypto, SSL verification disabled, unsafe
# ``yaml.load``, ``eval`` / ``exec`` misuse, shell injection via
# ``subprocess`` with ``shell=True``, XML parsing without
# ``defusedxml``, etc.  Scoped to medium+ severity via
# ``[tool.bandit]`` below so the low-severity intentional patterns
# (try/except/pass in cleanup paths, assert in type-narrowing
# Depends providers) don't cause noise.
bandit =                ">=1.7,<2"

# ─── deptry ignores ───────────────────────────────────────────────
#
# The client extras are legitimately optional runtime deps that the
# fork's non-client modules don't import — deptry's DEP002 (unused)
# would flag them under a default install, so ignore explicitly.
python-dotenv = "^1.2.2"
[tool.deptry.per_rule_ignores]
DEP002 = [
    "gevent", "protobuf", "gevent-eventemitter", "six",
    "types-protobuf", "mypy-protobuf",
    # New in 1.7 — declared as dev deps for CI to run them, not
    # imported from ``steam/``.  Users install / invoke these
    # themselves; the package doesn't need them at runtime.
    "ruff", "black", "mypy", "pip-audit", "bandit",
    # Declared as a hard runtime dep to keep an explicit version
    # range under our control (see ``[tool.poetry.dependencies]``
    # for the constraint + rationale).  We don't import it directly
    # — ``requests`` does — so deptry's DEP002 (unused) is a false
    # positive.  Ignore.
    "urllib3",
]
# Optional integrations import their frameworks lazily inside
# helper functions (``steam.aio.integrations.taskiq`` calls
# ``from taskiq import TaskiqEvents`` inside ``_register_lifecycle``;
# ``steam.aio.status.prometheus_hook`` imports ``prometheus_client``
# only when invoked).  These are user-supplied — installed by the
# caller when they wire the integration up — so ``pysteam-client``
# itself doesn't depend on them.  ``DEP001`` is the correct rule
# for "imported but not declared" (an earlier version of this
# file used ``DEP003`` — that's for transitive dep detection and
# doesn't apply when the package isn't in the environment at all,
# which is exactly the CI case).  ``pydantic`` moved out of this
# list — it's now a hard runtime dep (see above), imported at
# module top-level by ``steam/mcp/tools.py``.
DEP001 = ["taskiq", "prometheus_client"]
# Local dev environments that already have taskiq / prometheus_client
# installed (e.g. via another package in the same conda env or via
# ``poetry install --with dev`` on a machine that historically had
# more deps) see these as DEP003 rather than DEP001 — deptry can
# tell they're not in ``pyproject.toml`` but they resolve at import.
# Cover both rules so the run is consistent across dev + CI.
DEP003 = ["taskiq", "prometheus_client"]
DEP004 = ["dotenv", "vcr"]

[tool.deptry.package_module_name_map]
# Underscore vs hyphen in the extras names.
gevent_eventemitter = "gevent-eventemitter"

# ─── black (formatter) ────────────────────────────────────────────
#
# Applied to new modules + tests.  Legacy code (``steam.client``,
# ``steam.core``, ``steam.enums``, generated protobufs) is excluded
# so we don't rewrite tens of thousands of lines in one go —
# incremental adoption via a separate cleanup pass, not a mass
# reformat that would obliterate git-blame.
[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = '''
(
  ^/steam/protobufs/
  | ^/steam/client/
  | ^/steam/core/
  | ^/steam/enums/
  | ^/steam/utils/
  | ^/steam/webapi\.py$
  | ^/steam/webauth\.py$
  | ^/steam/guard\.py$
  | ^/steam/game_servers\.py$
  | ^/steam/globalid\.py$
  | ^/steam/monkey\.py$
  | ^/steam/steamid\.py$
  | ^/typings/
  | ^/vcr/
  | ^/scripts/
  | ^/tests/(?!test_aio_)
)
'''

# ─── ruff (linter) ────────────────────────────────────────────────
#
# Same scope as black — new code + async tests.  Rule set is a
# curated middle-ground: catches real bugs and simplifications
# without demanding a stylistic rewrite of the whole codebase.
#
# ``select`` categories:
#   E, W — pycodestyle (indentation, whitespace)
#   F     — pyflakes (unused imports, redefinitions, undefined names)
#   I     — isort   (import ordering — same policy as black-compat isort)
#   B     — flake8-bugbear (common mutable-default-argument-shaped bugs)
#   UP    — pyupgrade (py3.13-appropriate idioms)
#   C4    — flake8-comprehensions (dict()/list() -> literal, etc.)
#   SIM   — flake8-simplify (redundant if/else, boolean logic)
[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    "steam/protobufs",
    "steam/client",
    "steam/core",
    "steam/enums",
    "steam/utils",
    "steam/webapi.py",
    "steam/webauth.py",
    "steam/guard.py",
    "steam/game_servers.py",
    "steam/globalid.py",
    "steam/monkey.py",
    "steam/steamid.py",
    "steam/exceptions.py",
    "steam/versions_report",
    "typings",
    "vcr",
    "scripts",
    # Legacy tests use module-style ``import mock`` etc; ruff would
    # scream.  Only the new ``test_aio_*.py`` files are in scope.
    "tests/test_core_cm.py",
    "tests/test_core_crypto.py",
    "tests/test_game_servers.py",
    "tests/test_guard.py",
    "tests/test_steamid.py",
    "tests/test_utils.py",
    "tests/test_webapi.py",
    "tests/test_webauth.py",
    "tests/generete_webauth_vcr.py",
]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
# ``SIM105`` (use ``contextlib.suppress``) — the try/except pass
# idiom is idiomatic in metrics hooks and cross-thread cleanup
# paths where the exception is genuinely uninteresting; a
# ``contextlib.suppress`` in a hot loop adds a Python-level
# frame per call, which we don't want.
# ``BLE001`` (blind ``except Exception``) — the metrics-hook and
# runner shutdown paths intentionally catch everything because a
# broken hook / stale watcher must never take down the RPC path.
# ``E402`` (import not at top of file) — the lifespan / MCP
# adapter helpers do lazy framework imports inside functions to
# keep the module import-cheap; ruff flags the ``from taskiq
# import ...`` inside ``_register_lifecycle``, which is exactly
# what we want the shape to be.
# ``B008`` (function-call in default argument) — ``ReconnectPolicy()``
# / ``PoolMember()`` defaults are frozen dataclasses; the "shared
# mutable default" bug this rule guards against doesn't apply.
# ``UP031`` (format specifiers) — leaves the small handful of
# ``%``-style formats in cross-file log strings alone; migrating
# each one is churn without benefit.
# ``UP031`` (format specifiers) — leaves the small handful of
# ``%``-style formats in cross-file log strings alone; migrating
# each one is churn without benefit.
ignore = ["SIM105", "BLE001", "E402", "B008", "UP031"]
# Test files legitimately import at function scope, and pytest
# collects them by walking classes with side-effect setups —
# both trip a few rules that don't apply.
[tool.ruff.per-file-ignores]
"tests/**" = ["B011", "SIM117"]

# ─── mypy (type checker) ──────────────────────────────────────────
#
# Strict on the new modules only.  Legacy code (``steam.client``,
# ``steam.core``, generated protobufs) isn't mypy-friendly today
# and would take a dedicated cleanup pass to bring up; scoped in
# incrementally as modules get migrated.
#
# ``ignore_missing_imports`` covers gevent (untyped) and pydantic
# / fastapi / taskiq / mcp when the CI environment doesn't install
# them (they're optional deps of the async layer, not of mypy).
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
files = ["steam/aio", "steam/mcp"]
# ``no-untyped-call`` is genuine for ``SteamClient()`` (upstream
# ships no stubs); we ``# type: ignore[no-untyped-call]`` inline
# at the one call site, but the error would still swamp the
# report if left unwarned globally.
show_error_codes = true

# ─── bandit (SAST) ────────────────────────────────────────────────
#
# Scans for security anti-patterns.  Report at ``medium`` severity
# and above — the ``low`` bucket is dominated by two rules that
# fire on intentional patterns in ``steam.aio``:
#
#   * ``B110`` (try/except/pass) — used in cleanup / shutdown paths
#     where the exception is genuinely uninteresting (e.g. best-
#     effort ``sync.disconnect()`` during ``close()`` — a failure
#     there shouldn't mask the primary error).
#   * ``B101`` (assert used) — the FastAPI ``Depends`` providers do
#     ``assert isinstance(client, AsyncSteamClient)`` as a type-
#     narrowing helper (mypy needs it; the assert is only reached
#     after a truthy check).  Assert-in-production works even under
#     ``python -O`` here because the assertion runs during type
#     narrowing, not as the primary guard.
#
# ``targets`` matches the mypy scope — bandit sweeps every module
# we consider "modern" and lets legacy code (steam.client,
# steam.core, generated protobufs) sit outside the scan for now.
# Add legacy modules incrementally as they get an audit pass.
[tool.bandit]
targets = ["steam/aio", "steam/mcp"]
# skips already covered by the medium-severity filter, listed here
# for readability (if a future rule triggers at medium+ we DO want
# to see it — this list is intentional-anti-pattern only).
skips = ["B101", "B110"]

# ─── pyright / Pylance ─────────────────────────────────
#
# ``stubPath = "typings"`` points pyright at our local stub overrides
# under ``typings/`` (default pyright convention, but must be enabled
# explicitly).  Currently patches one typeshed bug:
#   google/protobuf/internal/builder.pyi — ``BuildServices`` param typing
# See the stub file's docstring for the full rationale.
[tool.pyright]
stubPath = "typings"

# ─── semantic-release  ──────────────────
[tool.semantic_release]
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_source = "toml"
branch = "master"
upload_to_PyPI = false
github_release = false
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
upload_to_release = false
tag_format = "steam-v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
    "MAJOR",
    "BREAKING",
    "breaking",
    "BREAKING CHANGE",
    "breaking change",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
major_tags = ["MAJOR", "BREAKING",  "BREAKING CHANGE", "breaking change"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
